# meta-pool

./: .gitignore  Cargo.toml  LICENSE.md  README.md  blobs.json  build.sh  deploy-alan-nearcli.sh  deploy-dev.sh  deploy-guildnet.sh  deploy-mainnet.sh  deploy-restore.sh  deploy-rew.sh  deploy-testnet.sh  restart-testnet.sh  sdg.sh  test.sh
divpool/src/: account.rs  distribute.rs  getters.rs  internal.rs  lib.rs  multi_fun_token.rs  types.rs  utils.rs  validator_loans.rs
divpool/tests/: simulation.rs  test_utils.rs  tests.md
docs/: _config.yml  beta-test.md  index.md  technical-notes.md  tokenomics.md
fixed-price-pool/: Cargo.toml  README.md
fixed-price-pool/src/: internal.rs  lib.rs  util.rs
meta-token/: Cargo.toml  README.md  blobs.json  token-deploy-mainnet.sh  token-deploy-testnet.sh
meta-token/src/: empty_nep_145.rs  internal.rs  lib.rs  migrations.rs  storage_nep_145.rs  util.rs  vesting.rs
metapool/: Cargo.toml  test.sh
metapool/src/: account.rs  distribute.rs  empty_nep_145.rs  fungible_token_standard.rs  gas.rs  getters.rs  internal.rs  lib.rs  migrations.rs  multi_fun_token.rs  owner.rs  reward_meter.rs  staking_pools.rs  types.rs  utils.rs  vaildator_loans_internal.rs  validator_loans.rs
metapool/src/tests/: test_utils.rs  unit_test_utils.rs
metapool/tests/: simulation.rs  tests.md
metapool/tests/sim/: main.rs  sim_contract_state.rs  sim_setup.rs  sim_steps.rs  sim_utils.rs  simulation_desk_check.rs  simulation_desk_state.rs  simulation_fuzzy.rs  simulation_simple.rs  test_utils.rs
pnear-token/: Cargo.toml  README.md
pnear-token/src/: internal.rs  lib.rs  util.rs
res/: diversifying_staking_pool.wasm
rewards-register-contract/: Cargo.toml
rewards-register-contract/src/: internal.rs  lib.rs
scripts/: deploy-dev.sh  deploy-guildnet.sh  deploy-mainnet.sh  deploy-testnet.sh  propose-upgrade.sh
src/: distribute.rs  gas.rs  getters.rs  internal.rs  lib.rs  multi_fun_token.rs  owner.rs  simulation_support.rs  staking_pool.rs  staking_pool_list.rs  types.rs  utils.rs
src/tests/: test_utils.rs
test-get-epoch-contract/: Cargo.toml  gec-deploy-testnet.sh
test-get-epoch-contract/src/: lib.rs  migration.rs  owner.rs  upgrade.rs
test-staking-pool/: Cargo.toml
test-staking-pool/src/: internal.rs  lib.rs  test_utils.rs
tests/: simulation.rs  test_utils.rs
