[workspace]
members = [
    "metapool",
    "meta-token",
    "fixed-price-pool",
    "test-staking-pool",
    "test-get-epoch-contract",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
