[package]
name = "meta-token"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = { git = "https://github.com/near/near-sdk-rs" } 
near-contract-standards = { git = "https://github.com/near/near-sdk-rs" }
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }

