[package]
edition = "2018"
name = "rewards-register"
version = "0.1.0"
authors = ["Narwallets.com <hello@narwallets.com>"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }
#near-crypto = { git = "https://github.com/nearprotocol/nearcore.git" }
#near-primitives = { git = "https://github.com/nearprotocol/nearcore.git" }
#near-runtime-standalone = { git = "https://github.com/nearprotocol/nearcore.git" }
